--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ h3, h1, h2 {
                         <h3 class="lh-base mb-0">Berkerja dan Belajar Back End dan Front End Web Developer</h3>
                     </div>
                     <p class="mb-4">Mendalamin Web Developer sejak tahun 2021 Ketika sedang kuliah di Universitas Islam Kalimantan Selatan Muhammad Arsyad AL Banjari Banjarmasin pada semester 4 awal mula belajar pemrograman Web Developer sampai sekarang.
-                        Setelah lulus kuliah saya belajar di perusahaan PT.Kelayan Digitek Sinergia sebagai Web Developer dan sampingan mengerjakan tugas kuliah, skripsi dan pembuatan aplikasi.
+                        Setelah lulus kuliah saya membuka usaha sendiri untuk pengerjaan tugas kuliah, skripsi dan pembuatan aplikasi.
                     </p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Harga Terjangkau</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Kualitas Product</p>
